<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="load_interstitial">Load Interstitial</string>
    <string name="more_apps">Load More Apps</string>
    <string name="preload_interstitial">Preload Interstitial</string>
    <string name="preload_more_apps">Preload More Apps</string>
    <string name="clear_preload_data">Clear Preload Data</string>
    <string name="record_purchase">Record Purchase</string>
    <string name="app_name">ChartboostExample</string>
    <string name="track_event">Track Event</string>
</resources>
